--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  flutter_shaders:
+    git:
+      url: https://github.com/jonahwilliams/flutter_shaders
+      ref: main
   flutter_staggered_grid_view: ^0.7.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
@@ -23,11 +27,11 @@ dependencies:
     git:
       url: https://github.com/alnitak/flutter_star_menu.git
       ref: v3.1.4
+  universal_io: ^2.2.2
   yoda:
     git:
       url: https://github.com/alnitak/yoda.git
       ref: v1.0.2
-  universal_io: ^2.2.2
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -45,3 +49,6 @@ flutter:
 
   assets:
     - assets/  
+
+  shaders:
+    - assets/shaders/ripple.frag
