--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: heyflutter
-description: A new Flutter project.
+description: HeyFlutter Challenge 21 Oct 2023
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
